Made mod compile and run